add feature: forget_password and reset_password
