# auth/openapi.yaml
@@ -6,6 +6,24 @@ info:
     title: Auth API
     version: 0.0.1
 paths:
+    /auth/forget_password:
+        post:
+            tags:
+                - Auth
+            operationId: Auth_ForgetPassword
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/api.v1.ForgetPasswordRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/api.v1.CommonReply'
     /auth/login:
         post:
             tags:
@@ -15,7 +33,7 @@ paths:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/LoginRequest'
+                            $ref: '#/components/schemas/api.v1.LoginRequest'
                 required: true
             responses:
                 "200":
@@ -23,13 +41,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/LoginReply'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
+                                $ref: '#/components/schemas/api.v1.LoginReply'
     /auth/register:
         post:
             tags:
@@ -39,7 +51,7 @@ paths:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/RegisterRequest'
+                            $ref: '#/components/schemas/api.v1.RegisterRequest'
                 required: true
             responses:
                 "200":
@@ -47,24 +59,40 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/RegisterReply'
-                default:
-                    description: Default error response
+                                $ref: '#/components/schemas/api.v1.RegisterReply'
+    /auth/reset_password:
+        post:
+            tags:
+                - Auth
+            operationId: Auth_ResetPassword
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/api.v1.ResetPasswordRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/Status'
+                                $ref: '#/components/schemas/api.v1.CommonReply'
 components:
     schemas:
-        GoogleProtobufAny:
+        api.v1.CommonReply:
             type: object
             properties:
-                '@type':
+                id:
                     type: string
-                    description: The type of the serialized message.
-            additionalProperties: true
-            description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
-        LoginReply:
+        api.v1.ForgetPasswordRequest:
+            type: object
+            properties:
+                email:
+                    type: string
+                phone:
+                    type: string
+        api.v1.LoginReply:
             type: object
             properties:
                 token:
@@ -78,8 +106,11 @@ components:
                     items:
                         type: string
                 organization:
-                    $ref: '#/components/schemas/Organization'
-        LoginRequest:
+                    $ref: '#/components/schemas/api.v1.Organization'
+                id:
+                    type: integer
+                    format: uint32
+        api.v1.LoginRequest:
             type: object
             properties:
                 name:
@@ -90,17 +121,17 @@ components:
                     type: string
                 password:
                     type: string
-        Organization:
+        api.v1.Organization:
             type: object
             properties:
                 name:
                     type: string
                 logo:
                     type: string
-        RegisterReply:
+        api.v1.RegisterReply:
             type: object
             properties: {}
-        RegisterRequest:
+        api.v1.RegisterRequest:
             type: object
             properties:
                 name:
@@ -111,25 +142,16 @@ components:
                     type: string
                 password:
                     type: string
-                passwordRepeated:
-                    type: string
                 role:
                     type: string
-        Status:
+        api.v1.ResetPasswordRequest:
             type: object
             properties:
                 code:
-                    type: integer
-                    description: The status code, which should be an enum value of [google.rpc.Code][google.rpc.Code].
-                    format: int32
-                message:
                     type: string
-                    description: A developer-facing error message, which should be in English. Any user-facing error message should be localized and sent in the [google.rpc.Status.details][google.rpc.Status.details] field, or localized by the client.
-                details:
-                    type: array
-                    items:
-                        $ref: '#/components/schemas/GoogleProtobufAny'
-                    description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
-            description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
+                password:
+                    type: string
+                repeated_password:
+                    type: string
 tags:
     - name: Auth
